DC_Motor_1/Design01.cydsn/BUILD.log
--------------- Build Started: 09/05/2023 13:26:31 Project: Design01, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
cydsfit.exe -.appdatapath "C:\Users\ASUS\AppData\Local\Cypress Semiconductor\PSoC Creator\4.4" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p "C:\Users\ASUS\Monash\Year 4 Sem 1 (July 2023)\ECE 4191\ece4191\DC_Motor_1\Design01.cydsn\Design01.cyprj" -d CY8C5888LTI-LP097 -s "C:\Users\ASUS\Monash\Year 4 Sem 1 (July 2023)\ECE 4191\ece4191\DC_Motor_1\Design01.cydsn\Generated_Source\PSoC5" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
ADD: pft.M0040: information: The following 6 pin(s) will be assigned a location by the fitter: Front_Echo_1(0), Front_Trigger_2(0), Left_Echo(0), Left_Trigger(0), Right_Echo(0), Right_Trigger(0)
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
main.c: In function 'F_or_R_1':
main.c:216:9: warning: unused variable 'flag_stop' [-Wunused-variable]
     int flag_stop = 0;
         ^
main.c: In function 'F_or_R_2':
main.c:271:9: warning: unused variable 'flag_stop' [-Wunused-variable]
     int flag_stop = 0;
         ^
main.c: In function 'main':
main.c:377:19: error: 'dist_right_detection_1' undeclared (first use in this function)
     isr_3_StartEx(dist_right_detection_1);
                   ^
main.c:377:19: note: each undeclared identifier is reported only once for each function it appears in
main.c:378:19: error: 'dist_left_detection_1' undeclared (first use in this function)
     isr_4_StartEx(dist_left_detection_1);
                   ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 09/05/2023 13:26:44 ---------------
